--- a/offsets.ini
+++ b/offsets.ini
@@ -236,123 +236,123 @@ Titan_Cockpit=0x01d46438
 
 [ClientClass.Ids]
 CAI_BaseNPC=0
-CAmbientGeneric=0
-CBaseAnimating=0
-CBaseAnimatingOverlay=0
+CAmbientGeneric=1
+CBaseAnimating=2
+CBaseAnimatingOverlay=3
 CBaseButton=0
-CBaseCombatCharacter=0
-CBaseEntity=0
-CBaseGrenade=0
+CBaseCombatCharacter=4
+CBaseEntity=5
+CBaseGrenade=6
 CBaseParticleEntity=0
-CBaseTempEntity=0
-CBaseToggle=0
-CBaseTrigger=0
-CBaseVPhysicsTrigger=0
-CBaseViewModel=0
-CBoneFollower=0
-CBreakableProp=0
-CBreakableSurface=0
-CCascadeLight=0
-CColorCorrection=0
-CCrossbowBolt=0
-CDeathBoxProp=0
-CDynamicLight=0
-CDynamicProp=0
-CDynamicPropLightweight=0
-CEntityBlocker=0
-CEntityDissolve=0
-CEntityLinkPage=0
-CEnvDecoy=0
-CEnvWind=0
-CFirstPersonProxy=0
-CFuncBrush=0
-CFuncBrushLightweight=0
-CFuncMoveLinear=0
-CGameRulesProxy=0
-CGlobalNonRewinding=0
-CGrappleHook=0
-CHardPointEntity=0
-CHardPointFrontierEntity=0
-CHealthKit=0
-CImportantOnEntSound=0
-CInfoPlacementHelper=0
-CInfoTarget=0
-CInfoTargetGravity=0
-CInfoTargetMinimap=0
-CLootGrabber=0
-CLootRoller=0
-CMissile=0
-CMovieDisplay=0
-CNPC_Drone=0
-CNPC_Dropship=0
-CNPC_SentryTurret=0
-CNPC_Titan=0
-CParticleSystem=0
-CPhysicsProp=0
-CPlayer=0
-CPlayerDecoy=0
-CPlayerTasklist=0
-CPlayerVehicle=0
-CPlayerWaypoint=0
-CPointCamera=0
-CPortal_PointPush=0
-CPostProcessController=0
-CPredictedFirstPersonProxy=0
-CProjectile=0
-CPropDoor=0
-CPropSurvival=0
-CRopeKeyframe=0
-CScriptMover=0
-CScriptMoverTrainNode=0
-CScriptNetData=0
-CScriptNetDataGlobal=0
-CScriptNetDataGlobalNonRewind=0
-CScriptNetData_SNDC_DEATH_BOX=0
-CScriptNetData_SNDC_GLOBAL=0
-CScriptNetData_SNDC_GLOBAL_NON_REWIND=0
-CScriptNetData_SNDC_PLAYER_EXCLUSIVE=0
-CScriptNetData_SNDC_PLAYER_EXCLUSIVE_EXPANDED=0
-CScriptNetData_SNDC_PLAYER_GLOBAL=0
-CScriptNetData_SNDC_TITAN_SOUL=0
-CScriptProp=0
-CScriptTraceVolume=0
-CShieldProp=0
-CSkyCamera=0
+CBaseTempEntity=7
+CBaseToggle=8
+CBaseTrigger=9
+CBaseVPhysicsTrigger=11
+CBaseViewModel=10
+CBoneFollower=12
+CBreakableProp=13
+CBreakableSurface=14
+CCascadeLight=15
+CColorCorrection=16
+CCrossbowBolt=17
+CDeathBoxProp=18
+CDynamicLight=19
+CDynamicProp=20
+CDynamicPropLightweight=21
+CEntityBlocker=22
+CEntityDissolve=23
+CEntityLinkPage=24
+CEnvDecoy=25
+CEnvWind=26
+CFirstPersonProxy=27
+CFuncBrush=28
+CFuncBrushLightweight=29
+CFuncMoveLinear=30
+CGameRulesProxy=31
+CGlobalNonRewinding=32
+CGrappleHook=33
+CHardPointEntity=34
+CHardPointFrontierEntity=35
+CHealthKit=36
+CImportantOnEntSound=37
+CInfoPlacementHelper=38
+CInfoTarget=39
+CInfoTargetGravity=40
+CInfoTargetMinimap=41
+CLootGrabber=42
+CLootRoller=43
+CMissile=44
+CMovieDisplay=45
+CNPC_Drone=46
+CNPC_Dropship=47
+CNPC_SentryTurret=48
+CNPC_Titan=49
+CParticleSystem=50
+CPhysicsProp=51
+CPlayer=52
+CPlayerDecoy=53
+CPlayerTasklist=54
+CPlayerVehicle=55
+CPlayerWaypoint=56
+CPointCamera=57
+CPortal_PointPush=58
+CPostProcessController=59
+CPredictedFirstPersonProxy=60
+CProjectile=61
+CPropDoor=62
+CPropSurvival=63
+CRopeKeyframe=64
+CScriptMover=65
+CScriptMoverTrainNode=66
+CScriptNetData=67
+CScriptNetDataGlobal=75
+CScriptNetDataGlobalNonRewind=76
+CScriptNetData_SNDC_DEATH_BOX=68
+CScriptNetData_SNDC_GLOBAL=69
+CScriptNetData_SNDC_GLOBAL_NON_REWIND=70
+CScriptNetData_SNDC_PLAYER_EXCLUSIVE=71
+CScriptNetData_SNDC_PLAYER_EXCLUSIVE_EXPANDED=72
+CScriptNetData_SNDC_PLAYER_GLOBAL=73
+CScriptNetData_SNDC_TITAN_SOUL=74
+CScriptProp=77
+CScriptTraceVolume=78
+CShieldProp=79
+CSkyCamera=80
 CStatueProp=0
-CStatusEffectPlugin=0
-CTEBreakModel=0
-CTEEffectDispatch=0
-CTEExplosion=0
-CTEGibEvent=0
-CTEParticleSystem=0
-CTEPhysicsProp=0
-CTEProjectileTrail=0
-CTEScriptParticleSystem=0
-CTEScriptParticleSystemOnEntity=0
-CTEScriptParticleSystemOnEntityWithPos=0
-CTEShatterSurface=0
-CTESoundDispatch=0
-CTeam=0
-CTitanSoul=0
-CTriggerCylinderHeavy=0
-CTriggerNoGrapple=0
-CTriggerNoObjectPlacement=0
-CTriggerNoZipline=0
-CTriggerPlayerMovement=0
-CTriggerPointGravity=0
-CTriggerSlip=0
-CTriggerUpdraft=0
-CTurret=0
-CVFogVolume=0
-CVGuiScreen=0
-CVortexSphere=0
-CWaterLODControl=0
-CWeaponX=0
-CWorld=0
-CZipline=0
-CZiplineEnd=0
-DoorMover=0
-ScriptMoverLightweight=0
+CStatusEffectPlugin=81
+CTEBreakModel=83
+CTEEffectDispatch=84
+CTEExplosion=85
+CTEGibEvent=86
+CTEParticleSystem=87
+CTEPhysicsProp=88
+CTEProjectileTrail=89
+CTEScriptParticleSystem=90
+CTEScriptParticleSystemOnEntity=91
+CTEScriptParticleSystemOnEntityWithPos=92
+CTEShatterSurface=93
+CTESoundDispatch=94
+CTeam=82
+CTitanSoul=95
+CTriggerCylinderHeavy=96
+CTriggerNoGrapple=97
+CTriggerNoObjectPlacement=98
+CTriggerNoZipline=99
+CTriggerPlayerMovement=100
+CTriggerPointGravity=101
+CTriggerSlip=102
+CTriggerUpdraft=103
+CTurret=104
+CVFogVolume=105
+CVGuiScreen=106
+CVortexSphere=107
+CWaterLODControl=108
+CWeaponX=109
+CWorld=110
+CZipline=111
+CZiplineEnd=112
+DoorMover=113
+ScriptMoverLightweight=114
 Titan_Cockpit=0
 
 [ClientClass.Sizes]
@@ -7469,7 +7469,6 @@ direction=Vector
 id=Int
 
 [ConVars]
-=0x01f38c40
 Allow_auto_Party=0x013699c0
 AutoRejectInviteToPlay=0x0136e5a0
 AutoRejectNewRules=0x0136e640
@@ -8566,6 +8565,7 @@ mat_dynamic_tonemapping=0x012078c0
 mat_dynamic_tonemapping=0x0137e3d0
 mat_enable_ssr=0x01380b40
 mat_envmap_scale=0x0191ff10
+mat_envmap_scale=0x01f38c40
 mat_envmaptgasize=0x012068b0
 mat_fastnobump=0x0137d450
 mat_fastspecular=0x012115a0
@@ -11019,6 +11019,41 @@ xmove=0x01cd9380
 .?AVCInput@@=0x01ce51a0
 .?AVCInputStackSystem@@=0x01372410
 .?AVCInputSystem@@=0x01372440
+.?AVCInputSystem@@=0x061c5710
+.?AVCInputSystem@@=0x061e7710
+.?AVCInputSystem@@=0x06209710
+.?AVCInputSystem@@=0x0622b710
+.?AVCInputSystem@@=0x0624d710
+.?AVCInputSystem@@=0x0626f710
+.?AVCInputSystem@@=0x06291710
+.?AVCInputSystem@@=0x062b3710
+.?AVCInputSystem@@=0x062d5710
+.?AVCInputSystem@@=0x062f7710
+.?AVCInputSystem@@=0x06319710
+.?AVCInputSystem@@=0x0633b710
+.?AVCInputSystem@@=0x0635d710
+.?AVCInputSystem@@=0x0637f710
+.?AVCInputSystem@@=0x063a1710
+.?AVCInputSystem@@=0x063c3710
+.?AVCInputSystem@@=0x063e5710
+.?AVCInputSystem@@=0x06407710
+.?AVCInputSystem@@=0x06429710
+.?AVCInputSystem@@=0x0644b710
+.?AVCInputSystem@@=0x0646d710
+.?AVCInputSystem@@=0x0648f710
+.?AVCInputSystem@@=0x064b1710
+.?AVCInputSystem@@=0x064d3710
+.?AVCInputSystem@@=0x064f5710
+.?AVCInputSystem@@=0x06517710
+.?AVCInputSystem@@=0x06539710
+.?AVCInputSystem@@=0x0655b710
+.?AVCInputSystem@@=0x0657d710
+.?AVCInputSystem@@=0x0659f710
+.?AVCInputSystem@@=0x065c1710
+.?AVCInputSystem@@=0x065e3710
+.?AVCInputSystem@@=0x06605710
+.?AVCInputSystem@@=0x06627710
+.?AVCInputSystem@@=0x06649710
 .?AVCInputWin32@@=0x0afd3ba0
 .?AVCIntProperty@@=0x01f2f928
 .?AVCKeyBindingListenerMgr@@=0x01949b30
@@ -11146,6 +11181,27 @@ xmove=0x01cd9380
 .?AVC_TESoundDispatch@@=0x01ce1020
 .?AVC_TESoundDispatch@@=0x01ce1030
 .?AVC_TempEntsSystem@@=0x012e6108
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x063bd370
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x063df370
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x06401370
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x06423370
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x06445370
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x06467370
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x06489370
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x064ab370
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x064cd370
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x064ef370
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x06511370
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x06533370
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x06555370
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x06577370
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x06599370
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x065bb370
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x065dd370
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x065ff370
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x06621370
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x06643370
+.?AVC_TraceFilterSkipNPCsAndPlayers@@=0x06665370
 .?AVC_TraceFilterSkipTwoEntities@@=0x01d15c00
 .?AVC_TraceFilterSkipTwoEntities@@=0x01d15c30
 .?AVC_TraceFilterSkipTwoEntities@@=0x01d15c60
@@ -11300,6 +11356,7 @@ xmove=0x01cd9380
 .?AVUnsubscribeResponse@protocol@antelope@eadp@ea@com@@=0x01f5f428
 .?AVUpdatePreferenceRequestV1@protocol@rtm@antelope@eadp@ea@com@@=0x01f60b10
 .?AVUserMembershipChangeV1@protocol@rtm@antelope@eadp@ea@com@@=0x01f5f9f8
+.?AVVPanel@vgui@@=0x0133bba0
 .?AVVPanelWrapper@@=0x01f30918
 .?AVValidationErrorV1@protocol@rtm@antelope@eadp@ea@com@@=0x01f604b0
 .?AVWorldChatAssignV1@protocol@rtm@antelope@eadp@ea@com@@=0x01f601f8
@@ -11319,4 +11376,3 @@ xmove=0x01cd9380
 .?AVstl_critical_section_win7@details@Concurrency@@=0x01f5e888
 .?AVstl_critical_section_win7@details@Concurrency@@=0x075bfc98
 .?AVstl_critical_section_win7@details@Concurrency@@=0x075c0cf8
-
