--- a/offsets.ini
+++ b/offsets.ini
@@ -2,15 +2,16 @@
 [Interfaces]
 
 [Miscellaneous]
-TimeDateStamp=0x63e17189
-CheckSum=0x223f6af
+TimeDateStamp=0x63ebda42
+CheckSum=0x22469ef
+GameVersion=v3.0.26.26
 NUM_ENT_ENTRIES=0x10000
 cl_entitylist=0x1b37938
 LocalEntityHandle=0x1380d9c
 GlobalVars=0x1461fa0
 InputSystem=0x14de2c0
 NameList=0xbc9ec10
-ViewRender=0x7677280
+ViewRender=0x7677288
 ViewMatrix=0x11a210
 ClientState=0x14622a0
 SignonState=0x146234c
@@ -24,14 +25,14 @@ CPlayer!helmetType=0x4630
 CPlayer!camera_origin=0x1f48
 CPlayer!camera_angles=0x1f54
 CBaseAnimating!m_pStudioHdr=0x10f0
-NetworkVarTablePtr=0xc16b540
+NetworkVarTablePtr=0xc16b550
 NetworkVarTableLen=300
 NetworkDataTablePtr=0x1b37938
 
 [NetworkedStringTables]
 EffectDispatch=0x07675848
 ExtraParticleFilesTable=0x076777d8
-ImpactEffectTableNames=0x076772b8
+ImpactEffectTableNames=0x076772c0
 Materials=0x076777b8
 Movies=0x07676118
 ParticleEffectNames=0x07675860
@@ -47,6 +48,184 @@ mods_list=0x2968
 mods_count=0x4aa8
 
 [ModifierNames]
+survival_armor_cooldown_mod=0
+pas_power_cell=1
+dev_mod_low_recharge=2
+amped_tacticals=3
+survival_finite_ordnance=4
+survival_ammo_regen_paused=5
+ability_in_effect_regen_paused=6
+survival_ammo_regen_staging=7
+ultimates_charge_over_time_disabled=8
+pariah_ads_melee=9
+seer_heartbeat_sensor_active=10
+vantage_ads_melee=11
+proto_door_kick=12
+data_knife=13
+disable_lunge=14
+burn_card_weapon_mod=15
+pas_ordnance_pack=16
+ult_active=17
+SP_BASE=18
+MP_BASE=19
+extra_tactical_charges=20
+burn_mod_grenade_electric_smoke=21
+ultimate_active_no_regen=22
+grapple_regen_stop=23
+beacon_1=24
+beacon_2=25
+beacon_3=26
+beacon_4=27
+beacon_5=28
+beacon_6=29
+double_link_mod=30
+interception_pylon_super_charge=31
+crypto_has_camera=32
+crypto_drone_access=33
+ultimate_active=34
+ability_used_mod=35
+redirect_mod=36
+amped_damage=37
+rampart_gunner=38
+mobile_hmg_active=39
+mobile_hmg_fast_switch=40
+infinite_ammo_clips=41
+elevator_shooter=42
+optic_cq_hcog_classic=43
+optic_cq_hcog_bruiser=44
+optic_cq_holosight=45
+optic_cq_holosight_variable=46
+optic_ranged_hcog=47
+optic_ranged_aog_variable=48
+drill_error=49
+using_jets=50
+mortar_ring_target_blocked_mod=51
+mortar_ring_arc_disabled_mod=52
+seer_tac_movespeed_modifier=53
+spree_lvl1_grenade_smoke=54
+spree_lvl2_grenade_smoke=55
+spree_lvl3_grenade_smoke=56
+sp_disable_arc_indicator=57
+newcastle_ult_leap_dash_mod=58
+newcastle_ult_leap_launch_mod=59
+newcastle_ult_leap_slam_mod=60
+axiom_leap_ult_held=61
+arenas_tac_max_cooldown=62
+ability_active_mod=63
+blue_paintball=64
+optic_cq_threat=65
+bullets_mag_l1=66
+bullets_mag_l2=67
+bullets_mag_l3=68
+bullets_mag_l4=69
+barrel_stabilizer_l1=70
+barrel_stabilizer_l2=71
+barrel_stabilizer_l3=72
+barrel_stabilizer_l4_flash_hider=73
+stock_tactical_l1=74
+stock_tactical_l2=75
+stock_tactical_l3=76
+laser_sight_l1=77
+laser_sight_l2=78
+laser_sight_l3=79
+crate=80
+purple_paintball=81
+gold_paintball=82
+hopup_shield_breaker=83
+hopup_unshielded_dmg=84
+hopup_quickdraw_holster=85
+hopup_multiplexer=86
+optic_sniper=87
+optic_sniper_variable=88
+optic_sniper_threat=89
+stock_sniper_l1=90
+stock_sniper_l2=91
+stock_sniper_l3=92
+hopup_turbocharger=93
+energy_mag_l1=94
+energy_mag_l2=95
+energy_mag_l3=96
+energy_mag_l4=97
+hopup_headshot_dmg=98
+optic_hawk_sniper=99
+sniper_mag_l1=100
+sniper_mag_l2=101
+sniper_mag_l3=102
+sniper_mag_l4=103
+legendary1=104
+amped_damage_alt=105
+shotgun_bolt_l1=106
+shotgun_bolt_l2=107
+shotgun_bolt_l3=108
+shotgun_bolt_l4=109
+hopup_double_tap=110
+altfire_double_tap=111
+shotgun_bolt_l1_double_tap=112
+shotgun_bolt_l2_double_tap=113
+shotgun_bolt_l3_double_tap=114
+shotgun_bolt_l4_double_tap=115
+breacher=116
+altfire=117
+hopup_highcal_rounds=118
+altfire_highcal=119
+highcal_mag_l1=120
+highcal_mag_l2=121
+highcal_mag_l3=122
+highcal_mag_l4=123
+g7_reactive_ammo_counter_mod=124
+hopup_smart_reload=125
+fast_reload_mod=126
+overloaded_ammo=127
+PVE_BASE=128
+optic_toggle=129
+hopup_dual_loader=130
+hopup_april_fools_old=131
+hopup_kinetic_loader=132
+hopup_kinetic_choke=133
+kinetic_choke=134
+hopup_energy_choke=135
+choke=136
+npc_shotgunner=137
+legendary_nrg_ice_reactive_charge=138
+legendary_nrg_crys_reactive_charge=139
+legendary_nrg_grn_reactive_charge=140
+legendary_nrg_ice_muzzle_flash=141
+legendary_nrg_crys_muzzle_flash=142
+legendary_nrg_grn_muzzle_flash=143
+s07_reactive_holo_ironsight=144
+s07_reactive_holo_ironsight_alt=145
+hopup_april_fools=146
+legendary2=147
+hopup_marksmans_tempo=148
+marksmans_tempo_active=149
+marksmans_tempo_buildup=150
+energized=151
+vkp=152
+hopup_shatter_rounds=153
+shatter_rounds_hipfire=154
+in_ads=155
+cupid=156
+arrows_shatter_dmg_lv0=157
+arrows_shatter_dmg_lv3=158
+arrows_shatter_dmg_lv5=159
+charge_lv1=160
+charge_lv2=161
+charge_lv3=162
+charge_lv4=163
+charge_lv5=164
+std_charge_dmg_lv1=165
+std_charge_dmg_lv2=166
+std_charge_dmg_lv3=167
+std_charge_dmg_lv4=168
+std_charge_dmg_lv5=169
+has_been_energized=170
+npc_stalker=171
+ammo_type_swap=172
+alt_ammo=173
+fully_heated=174
+seer_passive_throwingknife=175
+vertical_firestar_disabled=176
+fuse_long_throw_passive=177
 
 [Buttons]
 in_attack=0x076780e8
@@ -64,16 +243,16 @@ in_duck=0x0bc9f668
 in_forward=0x076781a0
 in_graph=0x076780f8
 in_jump=0x07678160
-in_klook=0x0c09e320
+in_klook=0x0c09e328
 in_left=0x0bca0258
 in_lookdown=0x0bc9f990
 in_lookup=0x0bc9f658
-in_melee=0x0c09e330
+in_melee=0x0c09e338
 in_movedown=0x0bca02a0
 in_moveleft=0x07678190
 in_moveright=0x076781b8
-in_moveup=0x0c09e300
-in_offhand0=0x0c09e310
+in_moveup=0x0c09e308
+in_offhand0=0x0c09e318
 in_offhand1=0x0bca0248
 in_offhand2=0x0bc9f7a0
 in_offhand3=0x0bc9f780
@@ -223,125 +402,125 @@ ScriptMoverLightweight=0x01f2afc8
 
 [ClientClass.Ids]
 CAI_BaseNPC=0
-CAmbientGeneric=0
-CBaseAnimating=0
-CBaseAnimatingOverlay=0
-CBaseCombatCharacter=0
-CBaseEntity=0
-CBaseGrenade=0
-CBaseTempEntity=0
-CBaseToggle=0
-CBaseTrigger=0
-CBaseVPhysicsTrigger=0
-CBaseViewModel=0
-CBoneFollower=0
-CBreakableProp=0
-CBreakableSurface=0
-CCarePackageInsightProp=0
-CCascadeLight=0
-CColorCorrection=0
-CCrossbowBolt=0
-CDeathBoxProp=0
-CDynamicLight=0
-CDynamicProp=0
-CDynamicPropLightweight=0
-CEntityBlocker=0
-CEntityDissolve=0
-CEntityLinkPage=0
-CEnvDecoy=0
-CEnvWind=0
-CFerroProp=0
-CFirstPersonProxy=0
-CFuncBrush=0
-CFuncBrushLightweight=0
-CFuncMoveLinear=0
-CGameRulesProxy=0
-CGlobalNonRewinding=0
-CGrappleHook=0
-CHardPointEntity=0
-CHardPointFrontierEntity=0
-CHealthKit=0
-CImportantOnEntSound=0
-CInfoPlacementHelper=0
-CInfoTarget=0
-CInfoTargetGravity=0
-CInfoTargetMinimap=0
-CLootGrabber=0
-CLootRoller=0
-CMaterialHarvester=0
-CMissile=0
-CMovieDisplay=0
-CNPC_Drone=0
-CNPC_Dropship=0
-CNPC_SentryTurret=0
-CNPC_Titan=0
-CParticleSystem=0
-CPhysicsProp=0
-CPlayer=0
-CPlayerDecoy=0
-CPlayerTasklist=0
-CPlayerVehicle=0
-CPlayerWaypoint=0
-CPointCamera=0
-CPortal_PointPush=0
-CPostProcessController=0
-CPredictedFirstPersonProxy=0
-CProjectile=0
-CPropDoor=0
-CPropSurvival=0
-CRopeKeyframe=0
-CScriptMover=0
-CScriptMoverTrainNode=0
-CScriptNetData=0
-CScriptNetDataGlobal=0
-CScriptNetDataGlobalNonRewind=0
-CScriptNetData_SNDC_DEATH_BOX=0
-CScriptNetData_SNDC_GLOBAL=0
-CScriptNetData_SNDC_GLOBAL_NON_REWIND=0
-CScriptNetData_SNDC_PLAYER_EXCLUSIVE=0
-CScriptNetData_SNDC_PLAYER_EXCLUSIVE_EXPANDED=0
-CScriptNetData_SNDC_PLAYER_GLOBAL=0
-CScriptNetData_SNDC_TITAN_SOUL=0
-CScriptProp=0
-CScriptTraceVolume=0
-CShieldProp=0
-CSkyCamera=0
-CStatusEffectPlugin=0
-CTEBreakModel=0
-CTEEffectDispatch=0
-CTEExplosion=0
-CTEGibEvent=0
-CTEParticleSystem=0
-CTEPhysicsProp=0
-CTEProjectileTrail=0
-CTEScriptParticleSystem=0
-CTEScriptParticleSystemOnEntity=0
-CTEScriptParticleSystemOnEntityWithPos=0
-CTEShatterSurface=0
-CTESoundDispatch=0
-CTeam=0
-CTitanSoul=0
-CTriggerCylinderHeavy=0
-CTriggerNoGrapple=0
-CTriggerNoObjectPlacement=0
-CTriggerNoZipline=0
-CTriggerOutOfBounds=0
-CTriggerPlayerMovement=0
-CTriggerPointGravity=0
-CTriggerSlip=0
-CTriggerUpdraft=0
-CTurret=0
-CVFogVolume=0
-CVGuiScreen=0
-CVortexSphere=0
-CWaterLODControl=0
-CWeaponX=0
-CWorld=0
-CZipline=0
-CZiplineEnd=0
-CZiprail=0
-DoorMover=0
-ScriptMoverLightweight=0
+CAmbientGeneric=1
+CBaseAnimating=2
+CBaseAnimatingOverlay=3
+CBaseCombatCharacter=4
+CBaseEntity=5
+CBaseGrenade=6
+CBaseTempEntity=7
+CBaseToggle=8
+CBaseTrigger=9
+CBaseVPhysicsTrigger=11
+CBaseViewModel=10
+CBoneFollower=12
+CBreakableProp=13
+CBreakableSurface=14
+CCarePackageInsightProp=15
+CCascadeLight=16
+CColorCorrection=17
+CCrossbowBolt=18
+CDeathBoxProp=19
+CDynamicLight=20
+CDynamicProp=21
+CDynamicPropLightweight=22
+CEntityBlocker=23
+CEntityDissolve=24
+CEntityLinkPage=25
+CEnvDecoy=26
+CEnvWind=27
+CFerroProp=28
+CFirstPersonProxy=29
+CFuncBrush=30
+CFuncBrushLightweight=31
+CFuncMoveLinear=32
+CGameRulesProxy=33
+CGlobalNonRewinding=34
+CGrappleHook=35
+CHardPointEntity=36
+CHardPointFrontierEntity=37
+CHealthKit=38
+CImportantOnEntSound=39
+CInfoPlacementHelper=40
+CInfoTarget=41
+CInfoTargetGravity=42
+CInfoTargetMinimap=43
+CLootGrabber=44
+CLootRoller=45
+CMaterialHarvester=46
+CMissile=47
+CMovieDisplay=48
+CNPC_Drone=49
+CNPC_Dropship=50
+CNPC_SentryTurret=51
+CNPC_Titan=52
+CParticleSystem=53
+CPhysicsProp=54
+CPlayer=55
+CPlayerDecoy=56
+CPlayerTasklist=57
+CPlayerVehicle=58
+CPlayerWaypoint=59
+CPointCamera=60
+CPortal_PointPush=61
+CPostProcessController=62
+CPredictedFirstPersonProxy=63
+CProjectile=64
+CPropDoor=65
+CPropSurvival=66
+CRopeKeyframe=67
+CScriptMover=68
+CScriptMoverTrainNode=69
+CScriptNetData=70
+CScriptNetDataGlobal=78
+CScriptNetDataGlobalNonRewind=79
+CScriptNetData_SNDC_DEATH_BOX=71
+CScriptNetData_SNDC_GLOBAL=72
+CScriptNetData_SNDC_GLOBAL_NON_REWIND=73
+CScriptNetData_SNDC_PLAYER_EXCLUSIVE=74
+CScriptNetData_SNDC_PLAYER_EXCLUSIVE_EXPANDED=75
+CScriptNetData_SNDC_PLAYER_GLOBAL=76
+CScriptNetData_SNDC_TITAN_SOUL=77
+CScriptProp=80
+CScriptTraceVolume=81
+CShieldProp=82
+CSkyCamera=83
+CStatusEffectPlugin=84
+CTEBreakModel=86
+CTEEffectDispatch=87
+CTEExplosion=88
+CTEGibEvent=89
+CTEParticleSystem=90
+CTEPhysicsProp=91
+CTEProjectileTrail=92
+CTEScriptParticleSystem=93
+CTEScriptParticleSystemOnEntity=94
+CTEScriptParticleSystemOnEntityWithPos=95
+CTEShatterSurface=96
+CTESoundDispatch=97
+CTeam=85
+CTitanSoul=98
+CTriggerCylinderHeavy=99
+CTriggerNoGrapple=100
+CTriggerNoObjectPlacement=101
+CTriggerNoZipline=102
+CTriggerOutOfBounds=103
+CTriggerPlayerMovement=104
+CTriggerPointGravity=105
+CTriggerSlip=106
+CTriggerUpdraft=107
+CTurret=108
+CVFogVolume=109
+CVGuiScreen=110
+CVortexSphere=111
+CWaterLODControl=112
+CWeaponX=113
+CWorld=114
+CZipline=115
+CZiplineEnd=116
+CZiprail=117
+DoorMover=118
+ScriptMoverLightweight=119
 
 [ClientClass.Sizes]
 CAI_BaseNPC=0x1e10
@@ -8042,7 +8221,6 @@ id=Int
 
 [ConVars]
 {empty}=0x01b0d940
-{empty}=0x020e40e0
 Allow_auto_Party=0x014d3fb0
 AutoRejectInviteToPlay=0x014d95f0
 AutoRejectNewRules=0x014d9690
@@ -9333,6 +9511,7 @@ mat_enable_ssr=0x014f0d80
 mat_envmap_capture_res=0x0136c760
 mat_envmap_output_res=0x0136ccf0
 mat_envmap_scale=0x01b086a0
+mat_envmap_scale=0x020e40e0
 mat_fastnobump=0x014ed370
 mat_fastspecular=0x0138e190
 mat_filterlightmaps=0x014ed640
@@ -11957,7 +12136,7 @@ xmove=0x01ec4880
 .?AVCGameUIFuncs@@=0x0136e788
 .?AVCHFontProperty@@=0x020db680
 .?AVCHLClient@@=0x01b1d620
-.?AVCHudTextMessage@@=0x01361408
+.?AVCHudTextMessage@@=0x01361448
 .?AVCHudTextureHandleProperty@@=0x014615c8
 .?AVCIVDebugOverlay@@=0x0136a410
 .?AVCInput@@=0x01ed1440
@@ -12013,7 +12192,7 @@ xmove=0x01ec4880
 .?AVCProportionalIntProperty@@=0x020db690
 .?AVCProportionalXPosProperty@@=0x020dc0a8
 .?AVCProportionalYPosProperty@@=0x020dafc8
-.?AVCQueueOps@TSListTests@@=0x01360970
+.?AVCQueueOps@TSListTests@@=0x01360960
 .?AVCQueuedPacketSender@@=0x083804b0
 .?AVCRagdollLRURetirement@@=0x01f2ebb0
 .?AVCRegistry@@=0x0136e708
@@ -12026,13 +12205,13 @@ xmove=0x01ec4880
 .?AVCServer@@=0x0846b180
 .?AVCShaderSystem@@=0x014f11e0
 .?AVCSimpleLoggingListener@@=0x01368550
-.?AVCSimpleLoggingListener@@=0x0ea7dad8
+.?AVCSimpleLoggingListener@@=0x0ea7db58
 .?AVCSimpleWindowsLoggingListener@@=0x01368560
 .?AVCSolidSetDefaults@@=0x01362aa8
 .?AVCSplitScreen@@=0x01462290
 .?AVCStaticPropMgr@@=0x0139aee0
 .?AVCStaticPropMgr@@=0x0139aee8
-.?AVCStdMemAlloc@@=0x0bc99b50
+.?AVCStdMemAlloc@@=0x0bc99b60
 .?AVCStringProperty@@=0x020db588
 .?AVCStudioRenderContext@@=0x01b0b060
 .?AVCSurfaceDragDropTarget@@=0x020dc308
