--- a/offsets.ini
+++ b/offsets.ini
@@ -39,6 +39,191 @@ mods_list=0x2990
 mods_count=0x4ad0
 
 [ModifierNames]
+survival_armor_cooldown_mod=0
+pas_power_cell=1
+dev_mod_low_recharge=2
+amped_tacticals=3
+survival_finite_ordnance=4
+survival_ammo_regen_paused=5
+ability_in_effect_regen_paused=6
+survival_ammo_regen_staging=7
+ultimates_charge_over_time_disabled=8
+burn_card_weapon_mod=9
+pas_ordnance_pack=10
+ult_active=11
+SP_BASE=12
+MP_BASE=13
+extra_tactical_charges=14
+burn_mod_grenade_electric_smoke=15
+ultimate_active_no_regen=16
+grapple_regen_stop=17
+beacon_1=18
+beacon_2=19
+beacon_3=20
+beacon_4=21
+beacon_5=22
+beacon_6=23
+double_link_mod=24
+interception_pylon_super_charge=25
+crypto_has_camera=26
+crypto_drone_access=27
+ultimate_active=28
+ability_used_mod=29
+redirect_mod=30
+s17cr_p0_cooldown_mod=31
+s17cr_p1_cooldown_mod=32
+s17cr_p2_cooldown_mod=33
+amped_damage=34
+rampart_gunner=35
+mobile_hmg_active=36
+mobile_hmg_fast_switch=37
+infinite_ammo_clips=38
+elevator_shooter=39
+optic_cq_hcog_classic=40
+optic_cq_hcog_bruiser=41
+optic_cq_holosight=42
+optic_cq_holosight_variable=43
+optic_ranged_hcog=44
+optic_ranged_aog_variable=45
+auto_loader=46
+drill_error=47
+mortar_ring_target_blocked_mod=48
+mortar_ring_arc_disabled_mod=49
+seer_tac_movespeed_modifier=50
+spree_lvl1_grenade_smoke=51
+spree_lvl2_grenade_smoke=52
+spree_lvl3_grenade_smoke=53
+sp_disable_arc_indicator=54
+newcastle_ult_leap_dash_mod=55
+newcastle_ult_leap_launch_mod=56
+newcastle_ult_leap_slam_mod=57
+axiom_leap_ult_held=58
+arenas_tac_max_cooldown=59
+ability_active_mod=60
+blue_paintball=61
+optic_cq_threat=62
+bullets_mag_l1=63
+bullets_mag_l2=64
+bullets_mag_l3=65
+bullets_mag_l4=66
+barrel_stabilizer_l1=67
+barrel_stabilizer_l2=68
+barrel_stabilizer_l3=69
+barrel_stabilizer_l4_flash_hider=70
+stock_tactical_l1=71
+stock_tactical_l2=72
+stock_tactical_l3=73
+laser_sight_l1=74
+laser_sight_l2=75
+laser_sight_l3=76
+purple_paintball=77
+gold_paintball=78
+hopup_shield_breaker=79
+hopup_unshielded_dmg=80
+hopup_quickdraw_holster=81
+crate=82
+hopup_multiplexer=83
+optic_sniper=84
+optic_sniper_variable=85
+optic_sniper_threat=86
+stock_sniper_l1=87
+stock_sniper_l2=88
+stock_sniper_l3=89
+hopup_turbocharger=90
+energy_mag_l1=91
+energy_mag_l2=92
+energy_mag_l3=93
+energy_mag_l4=94
+hopup_headshot_dmg=95
+sniper_mag_l1=96
+sniper_mag_l2=97
+sniper_mag_l3=98
+sniper_mag_l4=99
+legendary1=100
+amped_damage_alt=101
+shotgun_bolt_l1=102
+shotgun_bolt_l2=103
+shotgun_bolt_l3=104
+shotgun_bolt_l4=105
+hopup_double_tap=106
+altfire_double_tap=107
+shotgun_bolt_l1_double_tap=108
+shotgun_bolt_l2_double_tap=109
+shotgun_bolt_l3_double_tap=110
+shotgun_bolt_l4_double_tap=111
+breacher=112
+altfire=113
+hopup_highcal_rounds=114
+altfire_highcal=115
+highcal_mag_l1=116
+highcal_mag_l2=117
+highcal_mag_l3=118
+highcal_mag_l4=119
+g7_reactive_ammo_counter_mod=120
+hopup_smart_reload=121
+fast_reload_mod=122
+overloaded_ammo=123
+PVE_BASE=124
+optic_toggle=125
+hopup_dual_loader=126
+hopup_april_fools=127
+hopup_april_fools_light=128
+hopup_april_fools_energy=129
+hopup_april_fools_sniper=130
+hopup_april_fools_heavy=131
+hopup_kinetic_loader=132
+hopup_kinetic_choke=133
+kinetic_choke=134
+hopup_energy_choke=135
+choke=136
+npc_shotgunner=137
+legendary_nrg_ice_reactive_charge=138
+legendary_nrg_crys_reactive_charge=139
+legendary_nrg_grn_reactive_charge=140
+legendary_nrg_ice_muzzle_flash=141
+legendary_nrg_crys_muzzle_flash=142
+legendary_nrg_grn_muzzle_flash=143
+s07_reactive_holo_ironsight=144
+s07_reactive_holo_ironsight_alt=145
+legendary2=146
+hopup_marksmans_tempo=147
+marksmans_tempo_active=148
+marksmans_tempo_buildup=149
+energized=150
+vkp=151
+hopup_shatter_rounds=152
+shatter_rounds_hipfire=153
+charged=154
+in_ads=155
+cupid=156
+arrows_shatter_dmg_lv0=157
+arrows_shatter_dmg_lv3=158
+arrows_shatter_dmg_lv5=159
+charge_lv1=160
+charge_lv2=161
+charge_lv3=162
+charge_lv4=163
+charge_lv5=164
+std_charge_dmg_lv1=165
+std_charge_dmg_lv2=166
+std_charge_dmg_lv3=167
+std_charge_dmg_lv4=168
+std_charge_dmg_lv5=169
+npc_stalker=170
+ammo_type_swap=171
+alt_ammo=172
+fully_heated=173
+pariah_ads_melee=174
+seer_heartbeat_sensor_active=175
+vantage_ads_melee=176
+proto_door_kick=177
+data_knife=178
+disable_lunge=179
+using_jets=180
+seer_passive_throwingknife=181
+vertical_firestar_disabled=182
+fuse_long_throw_passive=183
+heatwave=184
 
 [Buttons]
 in_attack=0x0743d3b0
@@ -210,120 +395,120 @@ ScriptMoverLightweight=0x02246b28
 
 [ClientClass.Ids]
 CAI_BaseNPC=0
-CAmbientGeneric=0
-CBaseAnimating=0
-CBaseAnimatingOverlay=0
-CBaseCombatCharacter=0
-CBaseEntity=0
-CBaseGrenade=0
-CBaseTempEntity=0
-CBaseToggle=0
-CBaseTrigger=0
-CBaseVPhysicsTrigger=0
-CBaseViewModel=0
-CBoneFollower=0
-CBreakableProp=0
-CBreakableSurface=0
-CCarePackageInsightProp=0
-CCascadeLight=0
-CColorCorrection=0
-CCrossbowBolt=0
-CDeathBoxProp=0
-CDynamicLight=0
-CDynamicProp=0
-CDynamicPropLightweight=0
-CEntityBlocker=0
-CEntityDissolve=0
-CEntityLinkPage=0
-CEnvDecoy=0
-CEnvWind=0
-CFerroProp=0
-CFirstPersonProxy=0
-CFuncBrush=0
-CFuncBrushLightweight=0
-CFuncMoveLinear=0
-CGameRulesProxy=0
-CGlobalNonRewinding=0
-CGrappleHook=0
-CHardPointEntity=0
-CHardPointFrontierEntity=0
-CHealthKit=0
-CImportantOnEntSound=0
-CInfoPlacementHelper=0
-CInfoTarget=0
-CInfoTargetGravity=0
-CInfoTargetMinimap=0
-CLootGrabber=0
-CLootRoller=0
-CMaterialHarvester=0
-CMissile=0
-CMovieDisplay=0
-CNPC_Drone=0
-CNPC_Dropship=0
-CNPC_SentryTurret=0
-CNPC_Titan=0
-CParticleSystem=0
-CPhysicsProp=0
-CPlayer=0
-CPlayerDecoy=0
-CPlayerTasklist=0
-CPlayerVehicle=0
-CPlayerWaypoint=0
-CPointCamera=0
-CPortal_PointPush=0
-CPostProcessController=0
-CPredictedFirstPersonProxy=0
-CProjectile=0
-CPropDoor=0
-CPropSurvival=0
-CRopeKeyframe=0
-CScriptMover=0
-CScriptMoverTrainNode=0
-CScriptNetData=0
-CScriptNetDataGlobal=0
-CScriptNetDataGlobalNonRewind=0
-CScriptNetData_SNDC_DEATH_BOX=0
-CScriptNetData_SNDC_GLOBAL=0
-CScriptNetData_SNDC_GLOBAL_NON_REWIND=0
-CScriptNetData_SNDC_PLAYER_EXCLUSIVE=0
-CScriptNetData_SNDC_PLAYER_EXCLUSIVE_EXPANDED=0
-CScriptNetData_SNDC_PLAYER_GLOBAL=0
-CScriptNetData_SNDC_TITAN_SOUL=0
-CScriptProp=0
-CScriptTraceVolume=0
-CShieldProp=0
-CSkyCamera=0
-CStatusEffectPlugin=0
-CTEBreakModel=0
-CTEEffectDispatch=0
-CTEExplosion=0
-CTEGibEvent=0
-CTEParticleSystem=0
-CTEPhysicsProp=0
-CTEProjectileTrail=0
-CTEScriptParticleSystem=0
-CTEScriptParticleSystemOnEntity=0
-CTEScriptParticleSystemOnEntityWithPos=0
-CTEShatterSurface=0
-CTESoundDispatch=0
-CTeam=0
-CTitanSoul=0
-CTriggerCylinderHeavy=0
-CTriggerPlayerMovement=0
-CTriggerPointGravity=0
-CTriggerSlipSphere=0
-CTurret=0
-CVFogVolume=0
-CVGuiScreen=0
-CVortexSphere=0
-CWaterLODControl=0
-CWeaponX=0
-CWorld=0
-CZipline=0
-CZiplineEnd=0
-CZiprail=0
-DoorMover=0
-ScriptMoverLightweight=0
+CAmbientGeneric=1
+CBaseAnimating=2
+CBaseAnimatingOverlay=3
+CBaseCombatCharacter=4
+CBaseEntity=5
+CBaseGrenade=6
+CBaseTempEntity=7
+CBaseToggle=8
+CBaseTrigger=9
+CBaseVPhysicsTrigger=11
+CBaseViewModel=10
+CBoneFollower=12
+CBreakableProp=13
+CBreakableSurface=14
+CCarePackageInsightProp=15
+CCascadeLight=16
+CColorCorrection=17
+CCrossbowBolt=18
+CDeathBoxProp=19
+CDynamicLight=20
+CDynamicProp=21
+CDynamicPropLightweight=22
+CEntityBlocker=23
+CEntityDissolve=24
+CEntityLinkPage=25
+CEnvDecoy=26
+CEnvWind=27
+CFerroProp=28
+CFirstPersonProxy=29
+CFuncBrush=30
+CFuncBrushLightweight=31
+CFuncMoveLinear=32
+CGameRulesProxy=33
+CGlobalNonRewinding=34
+CGrappleHook=35
+CHardPointEntity=36
+CHardPointFrontierEntity=37
+CHealthKit=38
+CImportantOnEntSound=39
+CInfoPlacementHelper=40
+CInfoTarget=41
+CInfoTargetGravity=42
+CInfoTargetMinimap=43
+CLootGrabber=44
+CLootRoller=45
+CMaterialHarvester=46
+CMissile=47
+CMovieDisplay=48
+CNPC_Drone=49
+CNPC_Dropship=50
+CNPC_SentryTurret=51
+CNPC_Titan=52
+CParticleSystem=53
+CPhysicsProp=54
+CPlayer=55
+CPlayerDecoy=56
+CPlayerTasklist=57
+CPlayerVehicle=58
+CPlayerWaypoint=59
+CPointCamera=60
+CPortal_PointPush=61
+CPostProcessController=62
+CPredictedFirstPersonProxy=63
+CProjectile=64
+CPropDoor=65
+CPropSurvival=66
+CRopeKeyframe=67
+CScriptMover=68
+CScriptMoverTrainNode=69
+CScriptNetData=70
+CScriptNetDataGlobal=78
+CScriptNetDataGlobalNonRewind=79
+CScriptNetData_SNDC_DEATH_BOX=71
+CScriptNetData_SNDC_GLOBAL=72
+CScriptNetData_SNDC_GLOBAL_NON_REWIND=73
+CScriptNetData_SNDC_PLAYER_EXCLUSIVE=74
+CScriptNetData_SNDC_PLAYER_EXCLUSIVE_EXPANDED=75
+CScriptNetData_SNDC_PLAYER_GLOBAL=76
+CScriptNetData_SNDC_TITAN_SOUL=77
+CScriptProp=80
+CScriptTraceVolume=81
+CShieldProp=82
+CSkyCamera=83
+CStatusEffectPlugin=84
+CTEBreakModel=86
+CTEEffectDispatch=87
+CTEExplosion=88
+CTEGibEvent=89
+CTEParticleSystem=90
+CTEPhysicsProp=91
+CTEProjectileTrail=92
+CTEScriptParticleSystem=93
+CTEScriptParticleSystemOnEntity=94
+CTEScriptParticleSystemOnEntityWithPos=95
+CTEShatterSurface=96
+CTESoundDispatch=97
+CTeam=85
+CTitanSoul=98
+CTriggerCylinderHeavy=99
+CTriggerPlayerMovement=100
+CTriggerPointGravity=101
+CTriggerSlipSphere=102
+CTurret=103
+CVFogVolume=104
+CVGuiScreen=105
+CVortexSphere=106
+CWaterLODControl=107
+CWeaponX=108
+CWorld=109
+CZipline=110
+CZiplineEnd=111
+CZiprail=112
+DoorMover=113
+ScriptMoverLightweight=114
 
 [ClientClass.Sizes]
 CAI_BaseNPC=0x1e10
@@ -13919,6 +14104,7 @@ BXOJAUGOZHIDNWSCNQAWXVF=0x021e78e0
 CBTYKRVRHIKJPSQKSXEOJSRSUBGMX=0x01712800
 CCCKNCQJUVZNQJMBIKJMBQCZNQGQRMHRLMN=0x01612fc8
 CDGWUTHWMVGPUZWDPD=0x021fcfe0
+CEQAFZBDNJMQYZJTTCOPZRTWQ=0x0a38f1e8
 CPNLGBYINLBPNZMCN=0x0b084580
 CQSRKWWAGJDKUKNAXNQPYRROIFTHYU=0x02311b30
 CVSWVTBWOPGJPOHDOPAAOVPMFOFRVLWS=0x023117c8
@@ -13960,6 +14146,271 @@ GWKJGJVAYDJLIEI=0x01612cf8
 HDDCKSOZUTPGQAFCFHFDVPR=0x0b433790
 HDDCKSOZUTPGQAFCFHFDVPR=0x0b433798
 HDDCKSOZUTPGQAFCFHFDVPR=0x0b4337a0
+HDQQQQEEZFKYGOWRLX=0x03075b70
+HDQQQQEEZFKYGOWRLX=0x03097b70
+HDQQQQEEZFKYGOWRLX=0x030b9b70
+HDQQQQEEZFKYGOWRLX=0x030dbb70
+HDQQQQEEZFKYGOWRLX=0x030fdb70
+HDQQQQEEZFKYGOWRLX=0x0311fb70
+HDQQQQEEZFKYGOWRLX=0x03141b70
+HDQQQQEEZFKYGOWRLX=0x03163b70
+HDQQQQEEZFKYGOWRLX=0x03185b70
+HDQQQQEEZFKYGOWRLX=0x031a7b70
+HDQQQQEEZFKYGOWRLX=0x031c9b70
+HDQQQQEEZFKYGOWRLX=0x031ebb70
+HDQQQQEEZFKYGOWRLX=0x0320db70
+HDQQQQEEZFKYGOWRLX=0x0322fb70
+HDQQQQEEZFKYGOWRLX=0x03251b70
+HDQQQQEEZFKYGOWRLX=0x03273b70
+HDQQQQEEZFKYGOWRLX=0x03295b70
+HDQQQQEEZFKYGOWRLX=0x032b7b70
+HDQQQQEEZFKYGOWRLX=0x032d9b70
+HDQQQQEEZFKYGOWRLX=0x032fbb70
+HDQQQQEEZFKYGOWRLX=0x0331db70
+HDQQQQEEZFKYGOWRLX=0x0333e830
+HDQQQQEEZFKYGOWRLX=0x03360830
+HDQQQQEEZFKYGOWRLX=0x03382830
+HDQQQQEEZFKYGOWRLX=0x033a4830
+HDQQQQEEZFKYGOWRLX=0x033c6830
+HDQQQQEEZFKYGOWRLX=0x033e8830
+HDQQQQEEZFKYGOWRLX=0x033e9b70
+HDQQQQEEZFKYGOWRLX=0x0340a830
+HDQQQQEEZFKYGOWRLX=0x0340bb70
+HDQQQQEEZFKYGOWRLX=0x0342c830
+HDQQQQEEZFKYGOWRLX=0x0342db70
+HDQQQQEEZFKYGOWRLX=0x0344e830
+HDQQQQEEZFKYGOWRLX=0x0344fb70
+HDQQQQEEZFKYGOWRLX=0x03470830
+HDQQQQEEZFKYGOWRLX=0x03471b70
+HDQQQQEEZFKYGOWRLX=0x03492830
+HDQQQQEEZFKYGOWRLX=0x03493b70
+HDQQQQEEZFKYGOWRLX=0x034b4830
+HDQQQQEEZFKYGOWRLX=0x034b5b70
+HDQQQQEEZFKYGOWRLX=0x034d6830
+HDQQQQEEZFKYGOWRLX=0x034d7b70
+HDQQQQEEZFKYGOWRLX=0x034f8830
+HDQQQQEEZFKYGOWRLX=0x034f9b70
+HDQQQQEEZFKYGOWRLX=0x0351a830
+HDQQQQEEZFKYGOWRLX=0x0351bb70
+HDQQQQEEZFKYGOWRLX=0x0353c830
+HDQQQQEEZFKYGOWRLX=0x0353db70
+HDQQQQEEZFKYGOWRLX=0x0355e830
+HDQQQQEEZFKYGOWRLX=0x0355fb70
+HDQQQQEEZFKYGOWRLX=0x03580830
+HDQQQQEEZFKYGOWRLX=0x03581b70
+HDQQQQEEZFKYGOWRLX=0x035a2830
+HDQQQQEEZFKYGOWRLX=0x035a3b70
+HDQQQQEEZFKYGOWRLX=0x035c4830
+HDQQQQEEZFKYGOWRLX=0x035c5b70
+HDQQQQEEZFKYGOWRLX=0x035e6830
+HDQQQQEEZFKYGOWRLX=0x035e7b70
+HDQQQQEEZFKYGOWRLX=0x03608830
+HDQQQQEEZFKYGOWRLX=0x03609b70
+HDQQQQEEZFKYGOWRLX=0x0362a830
+HDQQQQEEZFKYGOWRLX=0x0362bb70
+HDQQQQEEZFKYGOWRLX=0x0364c830
+HDQQQQEEZFKYGOWRLX=0x0364db70
+HDQQQQEEZFKYGOWRLX=0x0366e830
+HDQQQQEEZFKYGOWRLX=0x0366fb70
+HDQQQQEEZFKYGOWRLX=0x03690830
+HDQQQQEEZFKYGOWRLX=0x03691b70
+HDQQQQEEZFKYGOWRLX=0x036b2830
+HDQQQQEEZFKYGOWRLX=0x036b3b70
+HDQQQQEEZFKYGOWRLX=0x036d4830
+HDQQQQEEZFKYGOWRLX=0x036d5b70
+HDQQQQEEZFKYGOWRLX=0x036f6830
+HDQQQQEEZFKYGOWRLX=0x036f7b70
+HDQQQQEEZFKYGOWRLX=0x03718830
+HDQQQQEEZFKYGOWRLX=0x03719b70
+HDQQQQEEZFKYGOWRLX=0x0373a830
+HDQQQQEEZFKYGOWRLX=0x0373bb70
+HDQQQQEEZFKYGOWRLX=0x0375c830
+HDQQQQEEZFKYGOWRLX=0x0375db70
+HDQQQQEEZFKYGOWRLX=0x0377e830
+HDQQQQEEZFKYGOWRLX=0x0377fb70
+HDQQQQEEZFKYGOWRLX=0x037a0830
+HDQQQQEEZFKYGOWRLX=0x037a1b70
+HDQQQQEEZFKYGOWRLX=0x037c2830
+HDQQQQEEZFKYGOWRLX=0x037c3b70
+HDQQQQEEZFKYGOWRLX=0x037e4830
+HDQQQQEEZFKYGOWRLX=0x037e5b70
+HDQQQQEEZFKYGOWRLX=0x03806830
+HDQQQQEEZFKYGOWRLX=0x03807b70
+HDQQQQEEZFKYGOWRLX=0x03828830
+HDQQQQEEZFKYGOWRLX=0x03829b70
+HDQQQQEEZFKYGOWRLX=0x0384a830
+HDQQQQEEZFKYGOWRLX=0x0384bb70
+HDQQQQEEZFKYGOWRLX=0x0386c830
+HDQQQQEEZFKYGOWRLX=0x0386db70
+HDQQQQEEZFKYGOWRLX=0x0388e830
+HDQQQQEEZFKYGOWRLX=0x0388fb70
+HDQQQQEEZFKYGOWRLX=0x038b0830
+HDQQQQEEZFKYGOWRLX=0x038b1b70
+HDQQQQEEZFKYGOWRLX=0x038d2830
+HDQQQQEEZFKYGOWRLX=0x038d3b70
+HDQQQQEEZFKYGOWRLX=0x038f4830
+HDQQQQEEZFKYGOWRLX=0x038f5b70
+HDQQQQEEZFKYGOWRLX=0x03916830
+HDQQQQEEZFKYGOWRLX=0x03917b70
+HDQQQQEEZFKYGOWRLX=0x03938830
+HDQQQQEEZFKYGOWRLX=0x03939b70
+HDQQQQEEZFKYGOWRLX=0x0395a830
+HDQQQQEEZFKYGOWRLX=0x0395bb70
+HDQQQQEEZFKYGOWRLX=0x0397c830
+HDQQQQEEZFKYGOWRLX=0x0397db70
+HDQQQQEEZFKYGOWRLX=0x0399e830
+HDQQQQEEZFKYGOWRLX=0x0399fb70
+HDQQQQEEZFKYGOWRLX=0x039c0830
+HDQQQQEEZFKYGOWRLX=0x039c1b70
+HDQQQQEEZFKYGOWRLX=0x039e2830
+HDQQQQEEZFKYGOWRLX=0x039e3b70
+HDQQQQEEZFKYGOWRLX=0x03a04830
+HDQQQQEEZFKYGOWRLX=0x03a05b70
+HDQQQQEEZFKYGOWRLX=0x03a26830
+HDQQQQEEZFKYGOWRLX=0x03a27b70
+HDQQQQEEZFKYGOWRLX=0x03a48830
+HDQQQQEEZFKYGOWRLX=0x03a49b70
+HDQQQQEEZFKYGOWRLX=0x03a6a830
+HDQQQQEEZFKYGOWRLX=0x03a6bb70
+HDQQQQEEZFKYGOWRLX=0x03a8c830
+HDQQQQEEZFKYGOWRLX=0x03a8db70
+HDQQQQEEZFKYGOWRLX=0x03aae830
+HDQQQQEEZFKYGOWRLX=0x03aafb70
+HDQQQQEEZFKYGOWRLX=0x03ad1b70
+HDQQQQEEZFKYGOWRLX=0x03ad1f90
+HDQQQQEEZFKYGOWRLX=0x03af3b70
+HDQQQQEEZFKYGOWRLX=0x03af3f90
+HDQQQQEEZFKYGOWRLX=0x03b15b70
+HDQQQQEEZFKYGOWRLX=0x03b15f90
+HDQQQQEEZFKYGOWRLX=0x03b37b70
+HDQQQQEEZFKYGOWRLX=0x03b37f90
+HDQQQQEEZFKYGOWRLX=0x03b59b70
+HDQQQQEEZFKYGOWRLX=0x03b59f90
+HDQQQQEEZFKYGOWRLX=0x03b7bb70
+HDQQQQEEZFKYGOWRLX=0x03b7bf90
+HDQQQQEEZFKYGOWRLX=0x03b9db70
+HDQQQQEEZFKYGOWRLX=0x03b9df90
+HDQQQQEEZFKYGOWRLX=0x03bbfb70
+HDQQQQEEZFKYGOWRLX=0x03bbff90
+HDQQQQEEZFKYGOWRLX=0x03be1b70
+HDQQQQEEZFKYGOWRLX=0x03be1f90
+HDQQQQEEZFKYGOWRLX=0x03c03b70
+HDQQQQEEZFKYGOWRLX=0x03c03f90
+HDQQQQEEZFKYGOWRLX=0x03c25b70
+HDQQQQEEZFKYGOWRLX=0x03c25f90
+HDQQQQEEZFKYGOWRLX=0x03c47b70
+HDQQQQEEZFKYGOWRLX=0x03c47f90
+HDQQQQEEZFKYGOWRLX=0x03c69b70
+HDQQQQEEZFKYGOWRLX=0x03c69f90
+HDQQQQEEZFKYGOWRLX=0x03c8bb70
+HDQQQQEEZFKYGOWRLX=0x03c8bf90
+HDQQQQEEZFKYGOWRLX=0x03cadb70
+HDQQQQEEZFKYGOWRLX=0x03cadf90
+HDQQQQEEZFKYGOWRLX=0x03ccfb70
+HDQQQQEEZFKYGOWRLX=0x03ccff90
+HDQQQQEEZFKYGOWRLX=0x03cf1b70
+HDQQQQEEZFKYGOWRLX=0x03cf1f90
+HDQQQQEEZFKYGOWRLX=0x03d13b70
+HDQQQQEEZFKYGOWRLX=0x03d13f90
+HDQQQQEEZFKYGOWRLX=0x03d35b70
+HDQQQQEEZFKYGOWRLX=0x03d35f90
+HDQQQQEEZFKYGOWRLX=0x03d57b70
+HDQQQQEEZFKYGOWRLX=0x03d57f90
+HDQQQQEEZFKYGOWRLX=0x03d79b70
+HDQQQQEEZFKYGOWRLX=0x03d79f90
+HDQQQQEEZFKYGOWRLX=0x03d9bb70
+HDQQQQEEZFKYGOWRLX=0x03d9bf90
+HDQQQQEEZFKYGOWRLX=0x03dbdb70
+HDQQQQEEZFKYGOWRLX=0x03dbdf90
+HDQQQQEEZFKYGOWRLX=0x03ddfb70
+HDQQQQEEZFKYGOWRLX=0x03ddff90
+HDQQQQEEZFKYGOWRLX=0x03e01b70
+HDQQQQEEZFKYGOWRLX=0x03e01f90
+HDQQQQEEZFKYGOWRLX=0x03e23b70
+HDQQQQEEZFKYGOWRLX=0x03e23f90
+HDQQQQEEZFKYGOWRLX=0x03e45b70
+HDQQQQEEZFKYGOWRLX=0x03e45f90
+HDQQQQEEZFKYGOWRLX=0x03e67b70
+HDQQQQEEZFKYGOWRLX=0x03e67f90
+HDQQQQEEZFKYGOWRLX=0x03e89b70
+HDQQQQEEZFKYGOWRLX=0x03e89f90
+HDQQQQEEZFKYGOWRLX=0x03eabb70
+HDQQQQEEZFKYGOWRLX=0x03eabf90
+HDQQQQEEZFKYGOWRLX=0x03ecdb70
+HDQQQQEEZFKYGOWRLX=0x03ecdf90
+HDQQQQEEZFKYGOWRLX=0x03eefb70
+HDQQQQEEZFKYGOWRLX=0x03eeff90
+HDQQQQEEZFKYGOWRLX=0x03f11b70
+HDQQQQEEZFKYGOWRLX=0x03f11f90
+HDQQQQEEZFKYGOWRLX=0x03f33b70
+HDQQQQEEZFKYGOWRLX=0x03f33f90
+HDQQQQEEZFKYGOWRLX=0x03f55b70
+HDQQQQEEZFKYGOWRLX=0x03f55f90
+HDQQQQEEZFKYGOWRLX=0x03f77b70
+HDQQQQEEZFKYGOWRLX=0x03f77f90
+HDQQQQEEZFKYGOWRLX=0x03f99b70
+HDQQQQEEZFKYGOWRLX=0x03f99f90
+HDQQQQEEZFKYGOWRLX=0x03fbbb70
+HDQQQQEEZFKYGOWRLX=0x03fbbf90
+HDQQQQEEZFKYGOWRLX=0x03fddb70
+HDQQQQEEZFKYGOWRLX=0x03fddf90
+HDQQQQEEZFKYGOWRLX=0x03fffb70
+HDQQQQEEZFKYGOWRLX=0x03ffff90
+HDQQQQEEZFKYGOWRLX=0x04021b70
+HDQQQQEEZFKYGOWRLX=0x04021f90
+HDQQQQEEZFKYGOWRLX=0x04043b70
+HDQQQQEEZFKYGOWRLX=0x04043f90
+HDQQQQEEZFKYGOWRLX=0x04065b70
+HDQQQQEEZFKYGOWRLX=0x04065f90
+HDQQQQEEZFKYGOWRLX=0x04087b70
+HDQQQQEEZFKYGOWRLX=0x04087f90
+HDQQQQEEZFKYGOWRLX=0x040a9b70
+HDQQQQEEZFKYGOWRLX=0x040a9f90
+HDQQQQEEZFKYGOWRLX=0x040cbb70
+HDQQQQEEZFKYGOWRLX=0x040cbf90
+HDQQQQEEZFKYGOWRLX=0x040edb70
+HDQQQQEEZFKYGOWRLX=0x040edf90
+HDQQQQEEZFKYGOWRLX=0x0410fb70
+HDQQQQEEZFKYGOWRLX=0x0410ff90
+HDQQQQEEZFKYGOWRLX=0x04131b70
+HDQQQQEEZFKYGOWRLX=0x04131f90
+HDQQQQEEZFKYGOWRLX=0x04153b70
+HDQQQQEEZFKYGOWRLX=0x04153f90
+HDQQQQEEZFKYGOWRLX=0x04175b70
+HDQQQQEEZFKYGOWRLX=0x04175f90
+HDQQQQEEZFKYGOWRLX=0x04197b70
+HDQQQQEEZFKYGOWRLX=0x04197f90
+HDQQQQEEZFKYGOWRLX=0x041b9b70
+HDQQQQEEZFKYGOWRLX=0x041b9f90
+HDQQQQEEZFKYGOWRLX=0x041dbb70
+HDQQQQEEZFKYGOWRLX=0x041dbf90
+HDQQQQEEZFKYGOWRLX=0x041fdb70
+HDQQQQEEZFKYGOWRLX=0x041fdf90
+HDQQQQEEZFKYGOWRLX=0x0421fb70
+HDQQQQEEZFKYGOWRLX=0x0421ff90
+HDQQQQEEZFKYGOWRLX=0x04241b70
+HDQQQQEEZFKYGOWRLX=0x04241f90
+HDQQQQEEZFKYGOWRLX=0x04263b70
+HDQQQQEEZFKYGOWRLX=0x04263f90
+HDQQQQEEZFKYGOWRLX=0x04284410
+HDQQQQEEZFKYGOWRLX=0x042a6410
+HDQQQQEEZFKYGOWRLX=0x042c8410
+HDQQQQEEZFKYGOWRLX=0x042ea410
+HDQQQQEEZFKYGOWRLX=0x0430c410
+HDQQQQEEZFKYGOWRLX=0x0432e410
+HDQQQQEEZFKYGOWRLX=0x04350410
+HDQQQQEEZFKYGOWRLX=0x04372410
+HDQQQQEEZFKYGOWRLX=0x04394410
+HDQQQQEEZFKYGOWRLX=0x043b6410
+HDQQQQEEZFKYGOWRLX=0x043d8410
+HDQQQQEEZFKYGOWRLX=0x043fa410
+HDQQQQEEZFKYGOWRLX=0x0441c410
+HDQQQQEEZFKYGOWRLX=0x0443e410
+HDQQQQEEZFKYGOWRLX=0x04460410
+HDQQQQEEZFKYGOWRLX=0x04482410
+HDQQQQEEZFKYGOWRLX=0x044a5b70
+HDQQQQEEZFKYGOWRLX=0x044c7b70
+HDQQQQEEZFKYGOWRLX=0x044e9b70
 HDQQQQEEZFKYGOWRLX=0x0be7dae0
 HGYKFSAHHW=0x021f5be0
 HHROEPGURYFSVSFWGLYFOSFO=0x021fcf20
@@ -14362,6 +14813,13 @@ JISQNRWVXOLUKORHKESESOSU=0x021f9340
 JOCKJDUCGVKBHNHXOLFDQZROPFJHPXC=0x02312548
 JOENETOREDJOLVSSUTLIXIZT=0x021ea220
 JOENETOREDJOLVSSUTLIXIZT=0x021ea230
+JVUWVTNEBPWXASUFKSUFKTGY=0x0a38b610
+JVUWVTNEBPWXASUFKSUFKTGY=0x0a38c490
+JVUWVTNEBPWXASUFKSUFKTGY=0x0a38cf70
+JVUWVTNEBPWXASUFKSUFKTGY=0x0a391280
+JVUWVTNEBPWXASUFKSUFKTGY=0x0a395cd0
+JVUWVTNEBPWXASUFKSUFKTGY=0x0a396980
+JVUWVTNEBPWXASUFKSUFKTGY=0x0a3b2cd0
 JXWDXYKSOIVVCZBPIEOWMARBOAU=0x016f93e8
 KBKSNEQDHXPEPBDYNDRZWAKNLR=0x023167c0
 KDZRDVGCXVSEVUKCQEDXJTEFTYVJTJ=0x01600948
